<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".AdvancedLevel">

    <ImageView
        android:id="@+id/imageViewCarAdvanced1"
        android:layout_width="168dp"
        android:layout_height="196dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageViewCarAdvanced2"
        android:layout_width="168dp"
        android:layout_height="196dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCarAdvanced3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCarAdvanced1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageViewCarAdvanced3"
        android:layout_width="168dp"
        android:layout_height="196dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/editTextCar1"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_car_brand1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/editTextCar2"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/enter_car_brand2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCar1" />

    <EditText
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/editTextCar3"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/enter_car_brand3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewCar3Answer"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:gravity="center"
        android:textSize="25sp"
        android:id="@+id/textViewCarAdvancedAnswer"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="38dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextCar3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSubmitAdvanced"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/submit_button_Advanced"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewCar3Answer"
        android:layout_width="190dp"
        android:layout_height="58dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitAdvanced"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewCar2Answer"
        android:layout_width="189dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:id="@+id/textViewCar1Answer"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCar1" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/score_Advanced"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>